# audit-agent

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: doc_type_policies.yaml  field_criticality.yaml  scoring_weights.yaml
fixtures/: audit_reports.json  doc_metadata.json
fixtures/primary_outputs/: DOC_0000.json  DOC_0000.labels.json  DOC_0001.json  DOC_0001.labels.json  DOC_0002.json  DOC_0002.labels.json  DOC_0003.json  DOC_0003.labels.json  DOC_0004.json  DOC_0004.labels.json  DOC_0005.json  DOC_0005.labels.json  DOC_0006.json  DOC_0006.labels.json  DOC_0007.json  DOC_0007.labels.json  DOC_0008.json  DOC_0008.labels.json  DOC_0009.json  DOC_0009.labels.json  DOC_0010.json  DOC_0010.labels.json  DOC_0011.json  DOC_0011.labels.json  DOC_0012.json  DOC_0012.labels.json  DOC_0013.json  DOC_0013.labels.json  DOC_0014.json  DOC_0014.labels.json  DOC_0015.json  DOC_0015.labels.json  DOC_0016.json  DOC_0016.labels.json  DOC_0017.json  DOC_0017.labels.json  DOC_0018.json  DOC_0018.labels.json  DOC_0019.json  DOC_0019.labels.json  (+60 more)
fixtures/sources/: DOC_0001.md  DOC_0002.md  DOC_0004.md  DOC_0005.md  DOC_0008.md  DOC_0010.md  DOC_0011.md  DOC_0012.md  DOC_0013.md  DOC_0014.md  DOC_0015.md  DOC_0016.md  DOC_0017.md  DOC_0018.md  DOC_0019.md  DOC_0020.md  DOC_0021.md  DOC_0022.md  DOC_0023.md  DOC_0024.md  DOC_0025.md  DOC_0026.md  DOC_0027.md  DOC_0028.md  DOC_0029.md  DOC_0030.md  DOC_0031.md  DOC_0032.md  DOC_0033.md  DOC_0034.md  (+15 more)
tests/: test_cli_demo.py  test_nim_client.py  test_report.py  test_scrutiny_router.py  test_tier1.py  test_tier2_probes.py
(+24 files in other folders)
